kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-ape
spec:
  selector:
    matchLabels:
      app: dashboard-ape
  replicas: 1
  template:
    metadata:
      labels:
        app: dashboard-ape
    spec:
      containers:
        - name: dashboard-ape
          image: inseefrlab/dashboard-ape:latest  # TODO: change to nightly tag
          imagePullPolicy: Always
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "5Gi"
              cpu: "10000m"
