kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-ape
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: dashboard-ape
